[package]
name    = "atms"
version = "0.1.0"
edition = "2018"

[lib]
name = "atms"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
blst = "0.3.7"
digest = "0.9"
blake2      = "0.9"
thiserror = "1.0"
rand_core   = "0.6.3"
libc        = "0.2.40"
num-bigint  = "0.4.0"
paste = "1"

[dev-dependencies]
proptest    = "1.0.0"
rand_chacha = "0.3.1"
rand = "0.8"
